--- a/vignettes/weighting.Rmd
+++ b/vignettes/weighting.Rmd
@@ -67,6 +67,7 @@ logistic_glm_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
 
 
 ```r
+set.seed(123)
 logistic_ppd_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
   logistic_ppd <- glm.fixed.a0(
     data.type = "Bernoulli",
@@ -169,26 +170,26 @@ knitr::kable(wide[new_order, ], digits = 3, row.names = FALSE)
 
 | borrowing|variable    |est_ci.glm              |est_ci.BayesPPD         |est_ci.psborrow2        |
 |---------:|:-----------|:-----------------------|:-----------------------|:-----------------------|
-|      0.00|(Intercept) |0.646 (-0.038, 1.357)   |0.667 (-0.016, 1.380)   |0.666 (-0.044, 1.384)   |
-|      0.25|(Intercept) |0.394 (-0.131, 0.931)   |0.414 (-0.106, 0.957)   |0.404 (-0.129, 0.950)   |
-|      0.50|(Intercept) |0.293 (-0.158, 0.751)   |0.298 (-0.160, 0.766)   |0.301 (-0.147, 0.746)   |
-|      0.75|(Intercept) |0.235 (-0.168, 0.642)   |0.243 (-0.158, 0.643)   |0.239 (-0.165, 0.643)   |
-|      1.00|(Intercept) |0.196 (-0.172, 0.567)   |0.200 (-0.173, 0.566)   |0.200 (-0.165, 0.570)   |
-|      0.00|cov1        |-0.771 (-1.465, -0.095) |-0.798 (-1.505, -0.103) |-0.794 (-1.474, -0.111) |
-|      0.25|cov1        |-0.781 (-1.340, -0.231) |-0.807 (-1.362, -0.255) |-0.795 (-1.356, -0.246) |
-|      0.50|cov1        |-0.769 (-1.252, -0.291) |-0.777 (-1.278, -0.296) |-0.782 (-1.270, -0.310) |
-|      0.75|cov1        |-0.758 (-1.191, -0.329) |-0.768 (-1.183, -0.343) |-0.769 (-1.201, -0.328) |
-|      1.00|cov1        |-0.749 (-1.145, -0.357) |-0.759 (-1.151, -0.359) |-0.757 (-1.147, -0.366) |
-|      0.00|cov2        |-0.730 (-1.472, -0.008) |-0.741 (-1.500, -0.006) |-0.751 (-1.491, -0.021) |
-|      0.25|cov2        |-0.559 (-1.114, -0.014) |-0.575 (-1.138, -0.020) |-0.567 (-1.126, -0.024) |
-|      0.50|cov2        |-0.459 (-0.926, 0.003)  |-0.467 (-0.936, -0.003) |-0.464 (-0.930, -0.006) |
-|      0.75|cov2        |-0.398 (-0.811, 0.011)  |-0.406 (-0.818, 0.001)  |-0.403 (-0.816, 0.011)  |
-|      1.00|cov2        |-0.358 (-0.731, 0.013)  |-0.359 (-0.739, 0.027)  |-0.359 (-0.731, 0.006)  |
-|      0.00|trt         |0.154 (-0.558, 0.871)   |0.152 (-0.554, 0.865)   |0.155 (-0.574, 0.885)   |
-|      0.25|trt         |0.349 (-0.183, 0.885)   |0.350 (-0.190, 0.888)   |0.353 (-0.197, 0.887)   |
-|      0.50|trt         |0.405 (-0.082, 0.894)   |0.409 (-0.073, 0.892)   |0.410 (-0.079, 0.889)   |
-|      0.75|trt         |0.434 (-0.031, 0.900)   |0.437 (-0.027, 0.902)   |0.440 (-0.028, 0.911)   |
-|      1.00|trt         |0.452 (-0.000, 0.905)   |0.456 (0.006, 0.913)    |0.456 (-0.000, 0.909)   |
+|      0.00|(Intercept) |0.646 (-0.038, 1.357)   |0.691 (-0.014, 1.399)   |0.666 (-0.044, 1.384)   |
+|      0.25|(Intercept) |0.394 (-0.131, 0.931)   |0.396 (-0.131, 0.941)   |0.404 (-0.129, 0.950)   |
+|      0.50|(Intercept) |0.293 (-0.158, 0.751)   |0.297 (-0.184, 0.767)   |0.301 (-0.147, 0.746)   |
+|      0.75|(Intercept) |0.235 (-0.168, 0.642)   |0.240 (-0.175, 0.665)   |0.239 (-0.165, 0.643)   |
+|      1.00|(Intercept) |0.196 (-0.172, 0.567)   |0.202 (-0.172, 0.578)   |0.200 (-0.165, 0.570)   |
+|      0.00|cov1        |-0.771 (-1.465, -0.095) |-0.809 (-1.515, -0.126) |-0.794 (-1.474, -0.111) |
+|      0.25|cov1        |-0.781 (-1.340, -0.231) |-0.793 (-1.350, -0.236) |-0.795 (-1.356, -0.246) |
+|      0.50|cov1        |-0.769 (-1.252, -0.291) |-0.776 (-1.271, -0.270) |-0.782 (-1.270, -0.310) |
+|      0.75|cov1        |-0.758 (-1.191, -0.329) |-0.769 (-1.212, -0.310) |-0.769 (-1.201, -0.328) |
+|      1.00|cov1        |-0.749 (-1.145, -0.357) |-0.761 (-1.152, -0.369) |-0.757 (-1.147, -0.366) |
+|      0.00|cov2        |-0.730 (-1.472, -0.008) |-0.745 (-1.496, -0.004) |-0.751 (-1.491, -0.021) |
+|      0.25|cov2        |-0.559 (-1.114, -0.014) |-0.568 (-1.124, -0.023) |-0.567 (-1.126, -0.024) |
+|      0.50|cov2        |-0.459 (-0.926, 0.003)  |-0.471 (-0.953, -0.003) |-0.464 (-0.930, -0.006) |
+|      0.75|cov2        |-0.398 (-0.811, 0.011)  |-0.402 (-0.814, 0.006)  |-0.403 (-0.816, 0.011)  |
+|      1.00|cov2        |-0.358 (-0.731, 0.013)  |-0.358 (-0.736, 0.022)  |-0.359 (-0.731, 0.006)  |
+|      0.00|trt         |0.154 (-0.558, 0.871)   |0.137 (-0.572, 0.864)   |0.155 (-0.574, 0.885)   |
+|      0.25|trt         |0.349 (-0.183, 0.885)   |0.361 (-0.170, 0.899)   |0.353 (-0.197, 0.887)   |
+|      0.50|trt         |0.405 (-0.082, 0.894)   |0.415 (-0.068, 0.916)   |0.410 (-0.079, 0.889)   |
+|      0.75|trt         |0.434 (-0.031, 0.900)   |0.436 (-0.031, 0.913)   |0.440 (-0.028, 0.911)   |
+|      1.00|trt         |0.452 (-0.000, 0.905)   |0.456 (-0.010, 0.909)   |0.456 (-0.000, 0.909)   |
 
 
 
