--- a/vignettes/original/_dataset.Rmd
+++ b/vignettes/original/_dataset.Rmd
@@ -205,8 +205,8 @@ parameter must be specified. This hyperprior determines
 between internal and external controls) how much borrowing of the external
 control group will be performed. Example hyperpriors include largely
 uninformative inverse gamma distributions
-e.g., `gamma_prior(alpha = .001, beta = .001)` as well as more
-informative distributions e.g., `gamma_prior(alpha = 1, beta = .001)`,
+e.g., `prior_gamma(alpha = .001, beta = .001)` as well as more
+informative distributions e.g., `prior_gamma(alpha = 1, beta = .001)`,
 though any distribution on the positive real line can be used. Distributions
 with more density at higher values (i.e., higher precision)
 will lead to more borrowing. We'll choose an uninformative gamma prior
@@ -219,7 +219,7 @@ vignette, see `vignette('prior_distributions', package = 'psborrow2')`.
 borrowing <- borrowing_details(
   method = "BDB",
   ext_flag_col = "ext",
-  tau_prior = gamma_prior(0.001, 0.001)
+  tau_prior = prior_gamma(0.001, 0.001)
 )
 borrowing
 ```
