--- a/vignettes/propensity_scores.Rmd
+++ b/vignettes/propensity_scores.Rmd
@@ -122,7 +122,7 @@ example_matrix_att <- create_data_matrix(
 analysis_att <- create_analysis_obj(
   data_matrix = example_matrix_att,
   outcome = outcome_surv_exponential("time", "cnsr", prior_normal(0, 10000), weight_var = "att"),
-  borrowing = borrowing_details("Full borrowing", "ext"),
+  borrowing = borrowing_full(),
   treatment = treatment_details("trt", prior_normal(0, 10000)),
   quiet = TRUE
 )
@@ -266,7 +266,7 @@ example_matrix_match <- create_data_matrix(
 analysis_match <- create_analysis_obj(
   data_matrix = example_matrix_match,
   outcome = outcome_surv_exponential("time", "cnsr", prior_normal(0, 10000)),
-  borrowing = borrowing_details("Full borrowing", "ext"),
+  borrowing = borrowing_full(),
   treatment = treatment_details("trt", prior_normal(0, 10000)),
   quiet = TRUE
 )
@@ -304,7 +304,7 @@ example_matrix_pp01 <- cbind(example_matrix, pp_alpha = ifelse(example_matrix[, 
 analysis_pp01 <- create_analysis_obj(
   data_matrix = example_matrix_pp01,
   outcome = outcome_surv_exponential("time", "cnsr", prior_normal(0, 10000), weight_var = "pp_alpha"),
-  borrowing = borrowing_details("Full borrowing", "ext"),
+  borrowing = borrowing_full()
   treatment = treatment_details("trt", prior_normal(0, 10000)),
   quiet = TRUE
 )
@@ -322,7 +322,7 @@ result_full <- mcmc_sample(
   create_analysis_obj(
     data_matrix = example_matrix,
     outcome = outcome_surv_exponential("time", "cnsr", prior_normal(0, 10000)),
-    borrowing = borrowing_details("Full borrowing", "ext"),
+    borrowing = borrowing_full(),
     treatment = treatment_details("trt", prior_normal(0, 10000)),
     quiet = TRUE
   ),
@@ -333,7 +333,7 @@ result_none <- mcmc_sample(
   create_analysis_obj(
     data_matrix = example_matrix,
     outcome = outcome_surv_exponential("time", "cnsr", prior_normal(0, 10000)),
-    borrowing = borrowing_details("No borrowing", "ext"),
+    borrowing = borrowing_none("ext"),
     treatment = treatment_details("trt", prior_normal(0, 10000)),
     quiet = TRUE
   ),
