--- a/vignettes/original/_propensity_scores.Rmd
+++ b/vignettes/original/_propensity_scores.Rmd
@@ -92,7 +92,7 @@ example_matrix_att <- create_data_matrix(
 analysis_att <- create_analysis_obj(
   data_matrix = example_matrix_att,
   outcome = outcome_surv_exponential("time", "cnsr", prior_normal(0, 10000), weight_var = "att"),
-  borrowing = borrowing_details("Full borrowing", "ext"),
+  borrowing = borrowing_full(),
   treatment = treatment_details("trt", prior_normal(0, 10000)),
   quiet = TRUE
 )
@@ -161,7 +161,7 @@ knitr::knit_hooks$set(output = output_null)
 analysis_match <- create_analysis_obj(
   data_matrix = example_matrix_match,
   outcome = outcome_surv_exponential("time", "cnsr", prior_normal(0, 10000)),
-  borrowing = borrowing_details("Full borrowing", "ext"),
+  borrowing = borrowing_full(),
   treatment = treatment_details("trt", prior_normal(0, 10000)),
   quiet = TRUE
 )
@@ -197,7 +197,7 @@ example_matrix_pp01 <- cbind(example_matrix, pp_alpha = ifelse(example_matrix[, 
 analysis_pp01 <- create_analysis_obj(
   data_matrix = example_matrix_pp01,
   outcome = outcome_surv_exponential("time", "cnsr", prior_normal(0, 10000), weight_var = "pp_alpha"),
-  borrowing = borrowing_details("Full borrowing", "ext"),
+  borrowing = borrowing_full(),
   treatment = treatment_details("trt", prior_normal(0, 10000)),
   quiet = TRUE
 )
@@ -214,7 +214,7 @@ result_full <- mcmc_sample(
   create_analysis_obj(
     data_matrix = example_matrix,
     outcome = outcome_surv_exponential("time", "cnsr", prior_normal(0, 10000)),
-    borrowing = borrowing_details("Full borrowing", "ext"),
+    borrowing = borrowing_full(),
     treatment = treatment_details("trt", prior_normal(0, 10000)),
     quiet = TRUE
   ),
@@ -225,7 +225,7 @@ result_none <- mcmc_sample(
   create_analysis_obj(
     data_matrix = example_matrix,
     outcome = outcome_surv_exponential("time", "cnsr", prior_normal(0, 10000)),
-    borrowing = borrowing_details("No borrowing", "ext"),
+    borrowing = borrowing_none("ext"),
     treatment = treatment_details("trt", prior_normal(0, 10000)),
     quiet = TRUE
   ),
