--- a/vignettes/original/_simulation_study.Rmd
+++ b/vignettes/original/_simulation_study.Rmd
@@ -285,7 +285,7 @@ which we'll create through the function `sim_borrowing_list()`.
 my_borrowing_list <- sim_borrowing_list(
   list(
     "No borrowing" = borrowing_none("ext"),
-    "Full borrowing" = borrowing_full(),
+    "Full borrowing" = borrowing_full("ext"),
     "BDB - conservative" = borrowing_hierarchical_commensurate("ext", prior_gamma(0.001, 0.001)),
     "BDB - aggressive" = borrowing_hierarchical_commensurate("ext", prior_gamma(1, 0.001))
   )
