--- a/design/Simulate_data_survival.Rmd
+++ b/design/Simulate_data_survival.Rmd
@@ -56,47 +56,25 @@ my_data_sim <- my_data_sim %>%
   set_enrollment(
     internal = enrollment_fixed(rate = c(25, 10), for_time = c(4, 30)),
     external = enrollment_fixed(rate = c(30, 10), for_time = c(4, 30))
-  )
-my_data_sim %>%
-  generate(
-    treatment_effect = c(1),
-    drift = c(0)
-  )
-
-# TODO continue from here
-my_data_sim <- my_data_sim %>%
+  ) %>%
   set_cut_off(
     internal = cut_off_after_first(time = 36),
     external = cut_off_after_events(n = 45)
+  ) %>%
+  set_dropout(
+    internal_treated = exp_event_dist,
+    internal_control = exp_event_dist,
+    external_control = event_dist(dist = "exponential", lambdas = 1 / 40)
   )
-my_data_sim %>% generate()
 
-
-my_data_sim <- my_data_sim %>% set_dropout(
-  internal_treated = exp_event_dist,
-  internal_control = exp_event_dist,
-  external_control = event_dist(dist = "exponential", lambdas = 1 / 40)
-)
-
-generate(my_data_sim)
 # Generate simulation list
 my_data <- generate(
   my_data_sim,
-  treatment_effect = c(0, .5, 1),
+  n = 4,
+  treatment_effect = c(0, .5, 1, 3),
   drift = c(0, .2, .4)
 )
 
-# need number of events cut-off
-# drop out rate for internal/external/treatment
-# cut_off rate for internal/external
-# enrollment rate for internal/external
-# option for fixed external data
-
-my_data <- generate(
-  my_data_sim,
-  treatment_effect = c(0, .5, 1),
-  drift = c(0, .2, .4)
-)
 
 my_data$guide
 head(my_data$data_list[[1]][[1]])
@@ -107,13 +85,16 @@ plot(
 )
 library(survival)
 
-plot(survfit(Surv(eventtime, status) ~ trt, data = as.data.frame(my_data$data_list[[1]][[1]])),
+plot(survfit(Surv(eventtime, status) ~ trt, data = as.data.frame(my_data$data_list[[1]][[3]])),
   main = "Treatment effect = 0"
 )
-plot(survfit(Surv(eventtime, status) ~ trt, data = as.data.frame(my_data$data_list[[2]][[1]])),
+plot(survfit(Surv(eventtime, status) ~ trt, data = as.data.frame(my_data$data_list[[2]][[3]])),
   main = "Treatment effect = 0.5"
 )
-plot(survfit(Surv(eventtime, status) ~ trt, data = as.data.frame(my_data$data_list[[3]][[1]])),
+plot(survfit(Surv(eventtime, status) ~ trt, data = as.data.frame(my_data$data_list[[3]][[3]])),
   main = "Treatment effect = 1"
+)
+plot(survfit(Surv(eventtime, status) ~ trt, data = as.data.frame(my_data$data_list[[4]][[3]])),
+  main = "Treatment effect = 3"
 )
 ```
